# ec-counter

./: README.md  package.json
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: README.md  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  schema.prisma
backend/src/: auth.py  main.py  model.py  users.py
frontend/: .eslintrc.cjs  README.md  bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  History.tsx  Timer.css  Timer.tsx  account.tsx  admin.css  admin.tsx  api.ts  index.css  login.css  login.tsx  main.tsx  routeTree.gen.ts
frontend/src/components/: Analytics.tsx  SidebarData.tsx  approvalspage.tsx  settingspage.tsx  sidebar.css  sidebar.tsx  statspage.tsx
frontend/src/routes/: __root.tsx  account.lazy.tsx  admin.lazy.tsx  history.lazy.tsx  index.lazy.tsx
